src/test/error/Alge.lns
pub alge AlgeTest {
   Val1,
   Val2,
}  

{
   let test1 = AlgeTest.Val1( 1 );
}
